Refactor Docker and backend configurations: update Dockerfiles for multi-stage builds, enhance CORS middleware for production, and improve error handling in API endpoints. Add harmonic functions editor to frontend and enhance music editor components with adaptive features and keyboard shortcuts.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -40,7 +40,7 @@ services:
       context: .
       dockerfile: Dockerfile.nginx
       args:
-        - frontend-builder
+        REACT_APP_API_URL: ${REACT_APP_API_URL:-http://localhost:8000}
     container_name: harmony-nginx
     ports:
       - "80:80"
