--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,9 +1,19 @@
+# Multi-stage build: first build frontend, then serve with nginx
+FROM node:18-alpine AS frontend-builder
+WORKDIR /app
+COPY frontend/package*.json ./
+RUN npm ci
+COPY frontend/ .
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=${REACT_APP_API_URL}
+RUN npm run build
+
 FROM nginx:alpine
 
 # Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copy built frontend (will be built in multi-stage)
+# Copy built frontend from builder stage
 COPY --from=frontend-builder /app/build /usr/share/nginx/html
 
 EXPOSE 80
