--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -4,7 +4,7 @@
 FROM node:18-alpine AS frontend-builder
 WORKDIR /app
 COPY frontend/package*.json ./
-RUN npm ci --only=production
+RUN npm ci --omit=dev
 COPY frontend/ .
 RUN npm run build
 
