--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -50,6 +50,7 @@ jobs:
         working-directory: ./frontend
         env:
           REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL || 'http://localhost:8000' }}
+          CI: false
         run: npm run build
 
       - name: Setup Pages
