Enhance Docker configurations and workflows: Enable BuildKit for faster builds in docker-compose, optimize Dockerfile layers for improved caching, and implement health checks in backend and nginx Dockerfiles. Update frontend workflow to use npm ci for reliable builds and lazy load components in React for better performance.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,9 @@ jobs:
           tags: ${{ env.REGISTRY }}/${{ steps.image-name.outputs.name }}-backend:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          platforms: linux/amd64
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
 
       # Frontend deployment is handled by frontend.yml workflow
       # This workflow only builds and pushes Docker images
