--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -2,27 +2,32 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
+# Install system dependencies in one layer
+RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     libcairo2-dev \
     libpango1.0-dev \
     libffi-dev \
     shared-mime-info \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
-# Copy requirements
+# Copy only requirements first for better caching
 COPY requirements.txt ./
 COPY backend/requirements.txt ./backend_requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install --no-cache-dir -r backend_requirements.txt
 
-# Copy application code
+# Install Python dependencies with pip cache optimization
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
+    pip install --no-cache-dir -r requirements.txt && \
+    pip install --no-cache-dir -r backend_requirements.txt
+
+# Copy application code (this layer changes most often)
 COPY . .
 
 # Expose port
 EXPOSE 8000
 
-# Run backend
-CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Use uvicorn with optimized settings
+# For production, use gunicorn with uvicorn workers for better performance
+CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1", "--loop", "uvloop"]
 
