--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,13 +1,28 @@
 # Multi-stage build: first build frontend, then serve with nginx
 FROM node:18-alpine AS frontend-builder
 WORKDIR /app
+
+# Copy package files first for better layer caching
 COPY frontend/package*.json ./
-RUN npm ci
+
+# Install dependencies with npm ci for faster, reliable builds
+RUN npm ci --only=production=false && \
+    npm cache clean --force
+
+# Copy frontend source code
 COPY frontend/ .
+
+# Build arguments
 ARG REACT_APP_API_URL
 ENV REACT_APP_API_URL=${REACT_APP_API_URL}
-RUN npm run build
+ENV NODE_ENV=production
+ENV CI=false
 
+# Build with optimizations
+RUN npm run build && \
+    rm -rf node_modules
+
+# Production stage: nginx
 FROM nginx:alpine
 
 # Copy nginx configuration
@@ -15,6 +30,10 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy built frontend from builder stage
 COPY --from=frontend-builder /app/build /usr/share/nginx/html
+
+# Add healthcheck
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD wget --quiet --tries=1 --spider http://localhost/ || exit 1
 
 EXPOSE 80
 
