--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -6,7 +6,8 @@ WORKDIR /app
 COPY frontend/package*.json ./
 
 # Install dependencies with npm ci for faster, reliable builds
-RUN npm ci --only=production=false && \
+# npm ci by default installs all dependencies (dependencies + devDependencies)
+RUN npm ci && \
     npm cache clean --force
 
 # Copy frontend code
