--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -6,7 +6,8 @@ WORKDIR /app
 COPY frontend/package*.json ./
 
 # Install dependencies with npm ci for faster, reliable builds
-RUN npm ci --only=production=false && \
+# npm ci by default installs all dependencies (needed for build)
+RUN npm ci && \
     npm cache clean --force
 
 # Copy frontend source code
