--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -44,7 +44,12 @@ jobs:
 
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm ci --prefer-offline --no-audit
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci --prefer-offline --no-audit
+          else
+            npm install --prefer-offline --no-audit
+          fi
 
       - name: Build
         working-directory: ./frontend
