--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libpango1.0-dev \
     libffi-dev \
     shared-mime-info \
+    curl \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
