--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -13,14 +13,16 @@ FROM python:3.11-slim AS backend
 WORKDIR /app
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     libcairo2-dev \
     libpango1.0-dev \
     libgdk-pixbuf2.0-dev \
     libffi-dev \
     shared-mime-info \
-    && rm -rf /var/lib/apt/lists/*
+    curl \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
 # Copy and install Python dependencies
 COPY requirements.txt backend/requirements.txt ./
